Add new benchmarks for Compiler, Time, String