@@ -40,7 +40,7 @@ import org.openjdk.jmh.infra.Blackhole;
 @OutputTimeUnit(TimeUnit.MICROSECONDS)
 @Warmup(iterations = 5, time = 10, timeUnit = TimeUnit.SECONDS)
 @Measurement(iterations = 5, time = 10, timeUnit = TimeUnit.SECONDS)
-@Fork(value = 5)
+@Fork(value = 5, jvmArgsAppend = "--add-modules=jdk.incubator.vector")
 @State(Scope.Benchmark)
 public class VectorApiBenchmark {
 
